--- a/q.html
+++ b/q.html
@@ -7,7 +7,7 @@
     <script src="js/jquery-1.7.2.min.js"></script>
     <script src="js/q.js"></script>
     <link href="css/qianzhu.css" rel="stylesheet">
-
+    <!--test  test  test first-->
 </head>
 <style>
 </style>
